[package]
name = "boa_engine"
version = "0.14.0"
edition = "2021"
rust-version = "1.58"
authors = ["boa-dev"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "js", "compiler", "lexer", "parser"]
categories = ["parser-implementations", "compilers"]
license = "Unlicense/MIT"
readme = "../README.md"

[features]
profiler = ["boa_profiler/profiler"]
deser = ["boa_interner/serde"]
nightly = [
    "boa_gc/nightly",
    "serde/unstable",
    "hashbrown/nightly",
    "regress/nightly",
    "boa_interner/nightly",
]

# Enable Boa's WHATWG console object implementation.
console = []

[dependencies]
boa_unicode = { path = "../boa_unicode", version = "0.14.0" }
boa_interner = { path = "../boa_interner", version = "0.14.0" }
# boa_gc = { path = "../boa_gc", version = "0.14.0" }
boa_gc = { path = "../../rust-gc/gc" }
boa_profiler = { path = "../boa_profiler", version = "0.14.0" }
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
# rand = "0.8.5"
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
regress = { git = "https://github.com/YXL76/regress", branch = "ingram", default-features = false, features = ["backend-pikevm"] }
num-bigint = { version = "0.4.3", default-features = false, features = ["serde"] }
num-integer = { version = "0.1.44", default-features = false }
bitflags = "1.3.2"
indexmap = { git = "https://github.com/bluss/indexmap", default-features = false }
ryu-js = "0.2.2"
# chrono = "0.4.19"
fast-float = { version = "0.2.0", default-features = false }
unicode-normalization = { version = "0.1.19", default-features = false }
dyn-clone = "1.0.5"
tap = "1.0.1"
hashbrown = "0.12.0"
spin = "0.9.2"
arcstr = "1.1.3"
ingram-kernel = { path = "../../kernel" }

[dev-dependencies]
# criterion = "0.3.5"
float-cmp = "0.9.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
jemallocator = "0.3.2"

[lib]
# crate-type = ["cdylib", "lib"]
name = "boa_engine"
bench = false

[[bench]]
name = "full"
harness = false
