[package]
name = "boa_examples"
version = "0.14.0"
authors = ["boa-dev"]
repository = "https://github.com/boa-dev/boa"
license = "Unlicense/MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = { path = "../boa_engine", features = ["console"], version = "0.14.0" }
boa_gc = { path = "../boa_gc", version = "0.14.0" }
gc = { git = "https://github.com/YXL76/rust-gc", rev = "95eef38627ebd1b44f5a42340b6adce4394892fd" }

