[package]
name = "boa_gc"
version = "0.14.0"
edition = "2021"
rust-version = "1.58"
authors = ["boa-dev"]
description = "Garbage collector used in Boa."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "js", "garbage", "memory"]
categories = ["command-line-utilities"]
license = "Unlicense/MIT"

[features]
nightly = ["gc/nightly"]

[dependencies]
gc = { git = "https://github.com/YXL76/rust-gc", branch = "no_std", features = [
    "derive",
] }

# Optional Dependencies
measureme = { version = "10.0.0", optional = true }
