[package]
name = "boa_interner"
version = "0.14.0"
edition = "2021"
rust-version = "1.58"
authors = ["boa-dev"]
description = "String interner used in Boa."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "js", "string", "interner"]
categories = ["data-structures"]
license = "Unlicense/MIT"

[dependencies]
string-interner = { git = "https://github.com/Robbepop/string-interner", default-features = false, features = ["serde-1", "inline-more", "backends"] }
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive"], optional = true }
gc = { git = "https://github.com/YXL76/rust-gc", branch = "no_std", features = ["derive"] }
